Relinked pages, edited footer

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
         
                     <div class="small-3 column">
                       <ul>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                     <div class="small-3 column">
