Changes made to Hero

--- a/index.html
+++ b/index.html
@@ -134,14 +134,16 @@
 
 
 
-
-    <div class="row hero">
+<section class="hero">
+  <div class="layer">
+    <div class="row">
       <div class="small-12 columns">
-        <h1>The Website Name</h1>
-        <h2>Website tagline or basic information</h2>
+        <h1>The Surviving Artist</h1>
+        <h3>Leading Providence's Design Students to some of the best resources around since 2017</h3>
       </div>
     </div>
-
+  </div>  
+</section>
 
     <div class="row links home-main">
       
