changes layout of workspaces page

--- a/resources/workspaces.html
+++ b/resources/workspaces.html
@@ -144,29 +144,84 @@
 
 
 <div class="main-content">
-    <div class="row links">
-      <div class="medium-6 columns">
-        <h2>Heading</h2>
-
-        <h3>Second Heading</h3>
-
+<div class="links row">
+  <div class="small-12 medium-6 large-4 column">
+    <a href="detail.html"><h3>Second Heading</h3></a>
         <ul>
           <li><a href="https://twitter.com/">Link</a></li>
           <li><a href="https://www.facebook.com/">Link</a></li>
           <li><a href="https://www.google.com/maps">Link</a></li>
         </ul>
+      <img src="../img/fpoimage.png">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div class="medium-6 columns">
-        <img src="../img/fpoimage.png">
-      </div>
+      <a href="detail.html"><h3>Second Heading</h3></a>
+        <ul>
+          <li><a href="https://twitter.com/">Link</a></li>
+          <li><a href="https://www.facebook.com/">Link</a></li>
+          <li><a href="https://www.google.com/maps">Link</a></li>
+        </ul>
+      <img src="../img/fpoimage.png">
+
+      <a href="detail.html"><h3>Second Heading</h3></a>
+        <ul>
+          <li><a href="https://twitter.com/">Link</a></li>
+          <li><a href="https://www.facebook.com/">Link</a></li>
+          <li><a href="https://www.google.com/maps">Link</a></li>
+        </ul>
+      <img src="../img/fpoimage.png">
     </div>
+  <div class="small-12 medium-6 large-4 column">
+    <a href="detail.html"><h3>Second Heading</h3></a>
+        <ul>
+          <li><a href="https://twitter.com/">Link</a></li>
+          <li><a href="https://www.facebook.com/">Link</a></li>
+          <li><a href="https://www.google.com/maps">Link</a></li>
+        </ul>
+      <img src="../img/fpoimage.png">
+
+      <a href="detail.html"><h3>Second Heading</h3></a>
+        <ul>
+          <li><a href="https://twitter.com/">Link</a></li>
+          <li><a href="https://www.facebook.com/">Link</a></li>
+          <li><a href="https://www.google.com/maps">Link</a></li>
+        </ul>
+      <img src="../img/fpoimage.png">
+
+      <a href="detail.html"><h3>Second Heading</h3></a>
+        <ul>
+          <li><a href="https://twitter.com/">Link</a></li>
+          <li><a href="https://www.facebook.com/">Link</a></li>
+          <li><a href="https://www.google.com/maps">Link</a></li>
+        </ul>
+      <img src="../img/fpoimage.png">
+    </div>
+  <div class="small-12 medium-6 large-4 column">
+    <a href="detail.html"><h3>Second Heading</h3></a>
+        <ul>
+          <li><a href="https://twitter.com/">Link</a></li>
+          <li><a href="https://www.facebook.com/">Link</a></li>
+          <li><a href="https://www.google.com/maps">Link</a></li>
+        </ul>
+      <img src="../img/fpoimage.png">
+
+      <a href="detail.html"><h3>Second Heading</h3></a>
+        <ul>
+          <li><a href="https://twitter.com/">Link</a></li>
+          <li><a href="https://www.facebook.com/">Link</a></li>
+          <li><a href="https://www.google.com/maps">Link</a></li>
+        </ul>
+      <img src="../img/fpoimage.png">
+
+      <a href="detail.html"><h3>Second Heading</h3></a>
+        <ul>
+          <li><a href="https://twitter.com/">Link</a></li>
+          <li><a href="https://www.facebook.com/">Link</a></li>
+          <li><a href="https://www.google.com/maps">Link</a></li>
+        </ul>
+      <img src="../img/fpoimage.png">
+    </div>
+
+</div>
 </div>
 
 
