Changes layout of resources detail pages

--- a/resources/index.html
+++ b/resources/index.html
@@ -143,7 +143,7 @@
 <div class="main-content">
 <div class="links row">
   <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
+    <a href="jerrys.html"><h3>Jerry's Artarma</h3></a>
         <ul>
           <li><a href="https://twitter.com/">Link</a></li>
           <li><a href="https://www.facebook.com/">Link</a></li>
