--- a/resources/printshops.html
+++ b/resources/printshops.html
@@ -140,85 +140,29 @@
       <li class="current"><a href="printshops.html">Print Shops</a></li>
     </ul>
 
+
 <div class="main-content">
-<div class="links row">
-  <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+  <div class="row">
+    <div class="small-12 columns">
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+     <ul class="small-block-grid-2 medium-block-grid-3">
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
-    </div>
-  <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+      <li> <a href="staples.html"><h3>Staples</h3> <img src="../img/fpoimage.png">  </li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+      <li> <a href="man.html"><h3>Minute Man Press</h3> <img src="../img/fpoimage.png">  </li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
-    </div>
-  <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+      <li> <a href="as220.html"><h3>AS220</h3> <img src="../img/fpoimage.png">  </li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+      <li> <a href="colorcompany.html"><h3>The Color Company</h3> <img src="../img/fpoimage.png">  </li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
-    </div>
+      <li> <a href="alpha.html"><h3>AlphaGraphics</h3> <img src="../img/fpoimage.png">  </li>
+      
+      <li> <a href="broadway.html"><h3>Broadway Print</h3> <img src="../img/fpoimage.png">  </li>
 
-</div>
+    </ul>
+
+     </div> 
+  </div>
 </div>
 
 
