--- a/resources/workspaces.html
+++ b/resources/workspaces.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Workspaces | The Surviving Artist</title>
+    <title>Workspaces & Gallerys | The Surviving Artist</title>
 
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" href="../css/custom.css" />
@@ -51,7 +51,7 @@
                  <ul>
                     <li><a href="stores.html">Art Supply Stores</a></li>
                     <li><a href="printshops.html">Print Shops</a></li>
-                    <li class="active"><a href="workspaces.html">Workspaces</a></li>
+                    <li class="active"><a href="workspaces.html">Workspaces & Gallerys</a></li>
                   </ul>
                 </li>
                 <li><a href="../support/index.html">Support</a>
@@ -88,7 +88,7 @@
            <ul class="dropdown">
               <li><a href="stores.html">Art Supply Stores</a></li>
               <li><a href="printshops.html">Print Shops</a></li>
-              <li class="active"><a href="workspaces.html">Workspaces</a></li>
+              <li class="active"><a href="workspaces.html">Workspaces & Gallerys</a></li>
             </ul>
           </li>
           <li class="has-dropdown"><a href="../support/index.html">Support</a>
@@ -144,84 +144,29 @@
 
 
 <div class="main-content">
-<div class="links row">
-  <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+<div class="row">
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
-    </div>
-  <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+<div class="small-12 columns">  
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+  <ul class="small-block-grid-2 medium-block-grid-3">    
+    <li>  <a href="as220.html"><h3>AS220</h3></a>  
+      <img src="../img/fpoimage.png"></li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
-    </div>
-  <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+    <li>  <a href="pvdartclub.html"><h3>Providence Art Club</h3></a>
+      <img src="../img/fpoimage.png"></li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+    <li>  <a href="galleryz.html"><h3>Gallery Z</h3></a>
+      <img src="../img/fpoimage.png"></li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
-    </div>
-
+    <li>  <a href="artprov.html"><h3>ArtProv Gallery</h3></a>  
+      <img src="../img/fpoimage.png"><li>
+  </ul>
+    
+</div>     
+   
 </div>
+
 </div>
 
 
