--- a/resources/stores.html
+++ b/resources/stores.html
@@ -139,84 +139,43 @@
       <li class="current"><a href="stores.html">Art Supply Stores</a></li>
     </ul>
 
+
+
+
 <div class="main-content">
-<div class="links row">
-  <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+ 
+ <div class="row">
+  <div class="small-12 columns">
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+  <ul class="small-block-grid-2 medium-block-grid-3">    
+   
+    <li>  <a href="jerrys.html"><h3>Jerry's Artarma</h3></a>  
+      <img src="../img/fpoimage.png"></li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
-    </div>
-  <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+    <li>  <a href="blick.html"><h3>Blick's Art Materials</h3></a>
+      <img src="../img/fpoimage.png"></li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+    <li>  <a href="risdstore.html"><h3>The RISD Store</h3></a>
+      <img src="../img/fpoimage.png"></li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
-    </div>
-  <div class="small-12 medium-6 large-4 column">
-    <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+    <li>  <a href="craftland.html"><h3>Craftland</h3></a>
+      <img src="../img/fpoimage.png"><li>
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
+    <li>  <a href="utrecht.html"><h3>Utrecht</h3></a>  
+      <img src="../img/fpoimage.png"><li>  
 
-      <a href="detail.html"><h3>Second Heading</h3></a>
-        <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
-        </ul>
-      <img src="../img/fpoimage.png">
-    </div>
+    <li>  <a href="paperworks.html"><h3>Paperworks</h3></a>  
+      <img src="../img/fpoimage.png"><li>  
+      
+    <li>  <a href="staples.html"><h3>Staples</h3></a>  
+      <img src="../img/fpoimage.png"><li>      
 
+    <li>  <a href="michaels.html"><h3>Michael's</h3></a>  
+      <img src="../img/fpoimage.png"><li>    
+ 
+  </ul>
+
+</div>
 </div>
 </div>
 
