Fixed art supply stores page

--- a/resources/stores.html
+++ b/resources/stores.html
@@ -159,19 +159,19 @@
       <img src="../img/fpoimage.png"></li>
 
     <li>  <a href="craftland.html"><h3>Craftland</h3></a>
-      <img src="../img/fpoimage.png"><li>
+      <img src="../img/fpoimage.png"></li>
 
     <li>  <a href="utrecht.html"><h3>Utrecht</h3></a>  
-      <img src="../img/fpoimage.png"><li>  
+      <img src="../img/fpoimage.png"></li>  
 
     <li>  <a href="paperworks.html"><h3>Paperworks</h3></a>  
-      <img src="../img/fpoimage.png"><li>  
+      <img src="../img/fpoimage.png"></li>  
       
     <li>  <a href="staples.html"><h3>Staples</h3></a>  
-      <img src="../img/fpoimage.png"><li>      
+      <img src="../img/fpoimage.png"></li>      
 
     <li>  <a href="michaels.html"><h3>Michael's</h3></a>  
-      <img src="../img/fpoimage.png"><li>    
+      <img src="../img/fpoimage.png"></li>    
  
   </ul>
 
