updated hero, footers, nav, & google maps

--- a/resources/stores.html
+++ b/resources/stores.html
@@ -149,7 +149,7 @@
 
   <ul class="small-block-grid-2 medium-block-grid-3">    
    
-    <li>  <a href="jerrys.html"><h3>Jerry's Artarma</h3></a>  
+    <li>  <a href="jerrys.html"><h3>Jerry's Artarama</h3></a>  
       <img src="../img/fpoimage.png"></li>
 
     <li>  <a href="blick.html"><h3>Blick's Art Materials</h3></a>
@@ -163,6 +163,9 @@
 
     <li>  <a href="utrecht.html"><h3>Utrecht</h3></a>  
       <img src="../img/fpoimage.png"></li>  
+
+    <li>  <a href="secondlife.html"><h3>RISD Second Life</h3></a>  
+      <img src="../img/fpoimage.png"></li> 
 
     <li>  <a href="paperworks.html"><h3>Paperworks</h3></a>  
       <img src="../img/fpoimage.png"></li>  
