--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <!-- Generator: Adobe Illustrator 20.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 374 375" style="enable-background:new 0 0 374 375;" xml:space="preserve">
-<g id="#tsa">
+<g id="tsa">
   <g>
     <path d="M346.2,172.1l-14.3-8.5c-4.7-29.4-18.2-55.7-37.5-76.2c2.1-1.7,4.4-3.8,6.5-6.1c2.9-3.2,5.5-6.7,7.1-9.6
       c0.8-1.5,1.4-2.7,1.8-3.6c0.4-0.8,0.5-1.3,0.6-1.5c-0.1,0-0.7,0.3-1.4,0.7c-0.9,0.5-2.1,1.2-3.5,2.2c-2.7,1.9-6,4.8-8.9,8
@@ -286,7 +286,7 @@
 <!-- Generator: Adobe Illustrator 20.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 374 375" style="enable-background:new 0 0 374 375;" xml:space="preserve">
-<g id="#tsa">
+<g id="tsa">
   <g>
     <path d="M346.2,172.1l-14.3-8.5c-4.7-29.4-18.2-55.7-37.5-76.2c2.1-1.7,4.4-3.8,6.5-6.1c2.9-3.2,5.5-6.7,7.1-9.6
       c0.8-1.5,1.4-2.7,1.8-3.6c0.4-0.8,0.5-1.3,0.6-1.5c-0.1,0-0.7,0.3-1.4,0.7c-0.9,0.5-2.1,1.2-3.5,2.2c-2.7,1.9-6,4.8-8.9,8
