updates detail pages in resources

--- a/resources/secondlife.html
+++ b/resources/secondlife.html
@@ -223,6 +223,7 @@
         </ul>
 
         <p>2ndLife is a nonprofit, student-run, upcycling program at the Rhode Island School of Design. This resource collects usable art supplies and raw materials to redistribute them back to the RISD students and local community.</p>
+        <p>204 Westminster St, Providence, Rhode Island</p>
         
       </div>
      
