added pictures to category pages

--- a/resources/stores.html
+++ b/resources/stores.html
@@ -216,28 +216,28 @@
   <ul class="small-block-grid-2 medium-block-grid-3">    
    
     <li>  <a href="jerrys.html"><h3>Jerry's Artarama</h3></a>  
-      <img src="../img/fpoimage.png"></li>
+      <img src="../img/jerrys.JPG"></li>
 
     <li>  <a href="blick.html"><h3>Blick's Art Materials</h3></a>
-      <img src="../img/fpoimage.png"></li>
+      <img src="../img/blick.JPG"></li>
 
     <li>  <a href="risdstore.html"><h3>The RISD Store</h3></a>
-      <img src="../img/fpoimage.png"></li>
+      <img src="../img/risdstore.jpg"></li>
 
     <li>  <a href="craftland.html"><h3>Craftland</h3></a>
-      <img src="../img/fpoimage.png"></li>
+      <img src="../img/craftland.jpg"></li>
 
     <li>  <a href="secondlife.html"><h3>RISD Second Life</h3></a>  
-      <img src="../img/fpoimage.png"></li> 
+      <img src="../img/secondlife.jpg"></li> 
 
     <li>  <a href="paperworks.html"><h3>Paperworks</h3></a>  
-      <img src="../img/fpoimage.png"></li>  
+      <img src="../img/outsidepaper.jpg"></li>  
       
     <li>  <a href="staples.html"><h3>Staples</h3></a>  
       <img src="../img/fpoimage.png"></li>      
 
     <li>  <a href="michaels.html"><h3>Michael's</h3></a>  
-      <img src="../img/fpoimage.png"></li>    
+      <img src="../img/michaels.jpg"></li>    
  
   </ul>
 
