--- a/resources/workspaces.html
+++ b/resources/workspaces.html
@@ -217,13 +217,13 @@
 
   <ul class="small-block-grid-2 medium-block-grid-3">    
     <li>  <a href="as220.html"><h3>AS220</h3></a>  
-      <img src="../img/fpoimage.png"></li>
+      <img src="../img/as220door.jpg"></li>
 
     <li>  <a href="pvdartclub.html"><h3>Providence Art Club</h3></a>
-      <img src="../img/fpoimage.png"></li>
+      <img src="../img/pvdartclub.jpg"></li>
 
     <li>  <a href="galleryz.html"><h3>Gallery Z</h3></a>
-      <img src="../img/fpoimage.png"></li>
+      <img src="../img/galleryzbanner.JPG"></li>
 
     <li>  <a href="artprov.html"><h3>ArtProv Gallery</h3></a>  
       <img src="../img/fpoimage.png"><li>
