--- a/resources/printshops.html
+++ b/resources/printshops.html
@@ -217,9 +217,9 @@
 
       <li> <a href="man.html"><h3>Minute Man Press</h3> <img src="../img/fpoimage.png">  </li>
 
-      <li> <a href="as220.html"><h3>AS220</h3> <img src="../img/fpoimage.png">  </li>
+      <li> <a href="as220.html"><h3>AS220</h3> <img src="../img/as220door.jpg">  </li>
 
-      <li> <a href="colorcompany.html"><h3>The Color Company</h3> <img src="../img/fpoimage.png">  </li>
+      <li> <a href="colorcompany.html"><h3>The Color Company</h3> <img src="../img/colorcompany.JPG">  </li>
       
       <li> <a href="broadway.html"><h3>Broadway Print</h3> <img src="../img/fpoimage.png">  </li>
 
