--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
         <p>Before shopping at just any location for materials make sure the place you’re shopping at accepts your ID for a discount. We know money is tight, so here is a list of go to locations for using your student ID or free rewards programs.</p>
       </div>
 
-      <div class="medium-2 linked-pages column">
+      <div class="medium-2 show-for-medium-up linked-pages column">
+        
         <ul>
           <li><a href="support/faq.html">Frequently Asked Questions</a></li>
           <li><a href="about/contact.html">Contact</a></li>
