--- a/resources/printshops.html
+++ b/resources/printshops.html
@@ -213,15 +213,15 @@
 
      <ul class="small-block-grid-2 medium-block-grid-3">
 
-      <li> <a href="staples.html"><h3>Staples</h3> <img src="../img/fpoimage.png">  </li>
+      <li> <a href="staples.html"><h3>Staples</h3> <img src="../img/staples.jpg">  </li>
 
-      <li> <a href="man.html"><h3>Minute Man Press</h3> <img src="../img/fpoimage.png">  </li>
+      <li> <a href="man.html"><h3>Minute Man Press</h3> <img src="../img/minuteman.jpg">  </li>
 
       <li> <a href="as220.html"><h3>AS220</h3> <img src="../img/as220door.jpg">  </li>
 
       <li> <a href="colorcompany.html"><h3>The Color Company</h3> <img src="../img/colorcompany.JPG">  </li>
       
-      <li> <a href="broadway.html"><h3>Broadway Print</h3> <img src="../img/fpoimage.png">  </li>
+      <li> <a href="broadway.html"><h3>Broadway Print</h3> <img src="../img/broadway.png">  </li>
 
     </ul>
 
