--- a/resources/stores.html
+++ b/resources/stores.html
@@ -234,7 +234,7 @@
       <img src="../img/outsidepaper.jpg"></li>  
       
     <li>  <a href="staples.html"><h3>Staples</h3></a>  
-      <img src="../img/fpoimage.png"></li>      
+      <img src="../img/staples.jpg"></li>      
 
     <li>  <a href="michaels.html"><h3>Michael's</h3></a>  
       <img src="../img/michaels.jpg"></li>    
