updates home page and gallery links

--- a/index.html
+++ b/index.html
@@ -200,21 +200,18 @@
     <div class="row links main-content home-main">
       
       <div class="medium-push-3 medium-7 column">
-        <h2>Heading</h2>
-        <h3>Seconds Heading</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h3>Graphic Design Tutoring Available</h3>
+        <p>Struggling with coding your website, midterm design project, or need advice on piecing together your? Get help from fellow students for all your design related questions. All tutoring sessions are taught by senior students, so this is a great opportunity for students to get perspective from an experienced students.</p>
+        <p>Here are the following hours and contact information for tutoring:</p>
         <ul>
-          <li><a href="https://twitter.com/">Link</a></li>
-          <li><a href="https://www.facebook.com/">Link</a></li>
-          <li><a href="https://www.google.com/maps">Link</a></li>
+          <li>Monday 3:30 PM-4:30 PM</li>
+          <li>Tuesday 10:00 AM-11:00 AM</li>
+          <li>Wednesday 3:30 PM-4:30 PM</li>
+          <li>Thursday 10:00 AM-11:00 AM</li>
         </ul>
+        <a href="mailto:survivingartist@info.com"> <p><i class="fa fa-2x fa-envelope" aria-hidden="true"></i> Email us today set up an appointment.</p></a>
 
-        <h2>Heading</h2>
+        
         <h3>Seconds Heading</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
