updates to content on detail pages, home page content, and home page layout

--- a/resources/blick.html
+++ b/resources/blick.html
@@ -221,7 +221,7 @@
           
         </ul>
 
-        <p>At Blick Art Materials, our family owners and dedicated staff support the Visual Art Community by providing the widest selection of art supplies at the lowest prices. With extraordinary service and integrity, we strive to provide artists, educators, students, and our employees with the tools, assistance, and training they need to grow, innovate, and reach their creative potential.</p>
+        <p>At Blick Art Materials, dedicated staff support the Visual Art Community by providing the widest selection of art supplies. While they may not be the most affordable, their Preferred Customer Program lets you enjoy 10% off any purchase. The knowledgeable staff is always there to answer all your questions. </p>
         <p>200 Wickenden St, Providence, RI 02903</p>
         <p>(401) 331-3780</p>
       </div>
@@ -233,7 +233,7 @@
         </div>
         <script>
       function initMap() {
-        var uluru = {lat: 41.838718, lng: -71.409039};
+        var uluru = {lat: 41.819729, lng: -71.399390};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 15,
           center: uluru
