--- a/resources/craftland.html
+++ b/resources/craftland.html
@@ -220,7 +220,7 @@
           <li><a href="https://www.facebook.com/CraftlandShop/"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
         </ul>
 
-        <p>Craftland started as an annual holiday sale in 2002, but now it’s a full-time, full-service shop in downtown Providence, Rhode Island. It is a handmade craft shop full of unique pieces.</p>
+        <p>Craftland started as an annual holiday sale in 2002, but now it’s a full-time, full-service shop in downtown Providence, Rhode Island. It is a handmade craft shop full of unique pieces from local artists. The friendly staff are helpful and knowledgable.</p>
         <p>212 Westminster St, Providence, RI 02903</p>
         <p>(401) 272-4285</p>
 
