--- a/resources/jerrys.html
+++ b/resources/jerrys.html
@@ -221,7 +221,7 @@
           <li><a href="https://www.facebook.com/JerrysArtarama/"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
         </ul>
 
-        <p>Jerry's Artarama of Providence offers the greatest selection of world-class art supply brands that artists love!</p>
+        <p>Jerry's Artarama of Providence offers the greatest selection of world-class art supply brands that artists love! The staff offer great help and advice for any project. Their many sales make sure you get the most product for the lowest price. Be sure to take advantage of their board trimming services for all your mounting and presentation needs. Also, save 10% off any purchase when you use your Jerry’s VIP card and receive a special birthday offer once a year. </p>
         <p>653 N Main St, Providence, RI 02904</p>
         <p>(401) 331-4530</p>
       </div>
