--- a/resources/michaels.html
+++ b/resources/michaels.html
@@ -222,7 +222,7 @@
           <li><a href="https://www.pinterest.com/michaelsstores/"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></a></li>
         </ul>
 
-        <p>Michaels Stores is the nation's largest retailer of arts and crafts materials.</p>
+        <p>Michaels Stores is the nation's largest retailer of arts and crafts materials. Michaels Rewards programs offers members-only discount codes and deals that can be accessed from their rewards app. The rewards app has your rewards card and also exclusive DIY projects with tutorials. Also, sign up for the email program and receive daily coupons.</p>
         <p>653 N Main St, Providence, RI 02904</p>
         <p>(508) 336-4101</p>
       </div>
