--- a/resources/risdstore.html
+++ b/resources/risdstore.html
@@ -155,7 +155,7 @@
           <li><a href="https://www.facebook.com/risd.store/"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
         </ul>
 
-        <p>A not-for-profit art-supply, gift, book, apparel, and convenience store. Carries a wide variety of art supplies, including materials for silkscreening, printmaking and etching; decorative papers, along with paper for drawing and printing; mounting boards; bookbinding supplies, etc.</p>
+        <p>A not-for-profit art-supply, gift, book, apparel, and convenience store. Carries a wide variety of art supplies, including materials for silkscreening, printmaking and etching, decorative papers, along with paper for drawing and printing, mounting boards and bookbinding supplies. You can also, purchase RISD merchandise. This is not the least expensive of the art supply shops but it is convenient for those who are in the RISD area. </p>
         <p>30 N Main St, Providence, RI 02903</p>
         <p>(401) 454-6460</p>
       </div>
