--- a/resources/secondlife.html
+++ b/resources/secondlife.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Blick's Art Materials | The Surviving Artist</title>
+    <title>RISD 2ndLife | The Surviving Artist</title>
 
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" href="../css/custom.css" />
@@ -203,7 +203,7 @@
       <li><a href="../index.html">Home</a></li>
       <li><a href="index.html">Resources</a></li>
       <li><a href="stores.html">Art Supply Stores</a></li>
-      <li class="current"><a href="secondlife.html">RISD Seconds Life</a></li>
+      <li class="current"><a href="secondlife.html">RISD 2ndLife</a></li>
     </ul>
 
 
@@ -213,7 +213,7 @@
     <div class="row links">
       <div class="medium-6 columns">
 
-        <h3>RISD Second Life</h3>
+        <h3>RISD 2ndLife</h3>
 
         <ul>
           
@@ -222,7 +222,7 @@
           <li><a href="https://www.instagram.com/risd2ndlife/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
         </ul>
 
-        <p>2ndLife is a nonprofit, student-run, upcycling program at the Rhode Island School of Design. This resource collects usable art supplies and raw materials to redistribute them back to the RISD students and local community.</p>
+        <p>2ndLife is a nonprofit, student-run, upcycling program at the Rhode Island School of Design. This resource collects usable art supplies and raw materials to redistribute them back to the RISD students and local community. It is the least expensive of the supply stores, but you must keep in mind that it is a hit or miss. You may not always find what you're looking for, but the price cannot be beat.</p>
         <p>204 Westminster St, Providence, Rhode Island</p>
         
       </div>
