--- a/resources/colorcompany.html
+++ b/resources/colorcompany.html
@@ -208,12 +208,15 @@
 
 
 
+
+<div class="row">
 <ul class="breadcrumbs">
       <li><a href="../index.html">Home</a></li>
       <li><a href="index.html">Resources</a></li>
       <li><a href="stores.html">Art Supply Stores</a></li>
       <li class="current"><a href="colorcompany.html">The Color Company</a></li>
     </ul>
+</div>
 
 
 
