updates social media links & hero image

--- a/about/contact.html
+++ b/about/contact.html
@@ -218,21 +218,19 @@
 
 <div class="main-content row">
 
-<div class="heading row">
-  <h2>Contact</h2>
+    <div class="heading row">
+      <h2>Contact</h2>
+    </div>
+
+<div class="contact row">
+  <ul class="small-block-grid-2">
+    <li><a href="https://www.instagram.com/surviving_artist/"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i><h3>Follow @surviving_artist on Instagram</h3></a></li>
+    <li><a href="https://www.facebook.com/survivingartist/"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i><h3>Subscribe to The Surviving Artist</h3></a></li>
+    <li><a href="https://twitter.com/survivin_artist"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i><h3>Follow @survivin_artist on Twitter</h3></a></li>
+    <li><a href="mailto:survivingartist@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i><h3>Email us survivingartist@gmail.com</h3></a></li>
+
+  </ul>
 </div>
-
-<!--  <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-
-    <li><a href="https://www.instagram.com/surviving_artist/"><i class="fa fa-2x fa-instagram" aria-hidden="true"><h3></h3></a></li>
-
-    <li><a href="https://www.facebook.com/survivingartist/"><i class="fa fa-2x fa-facebook-square" aria-hidden="true"><h3></h3></a></li>
-
-    <li><a href="https://twitter.com/survivin_artist"><i class="fa fa-2x fa-twitter-square" aria-hidden="true"><h3></h3></a></li>
-
-    <li><a href="mailto:survivingartist@gmail.com"><i class="fa fa-2x fa-envelope" aria-hidden="true"><h3></h3></a></li>
-
-  </ul>     -->
 
 
 </div>
@@ -353,14 +351,13 @@
         <div class="medium-4 column">
             <div class="row">
               <div class="medium-12 column">
-
-                    <a href="https://instagram.com"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/surviving_artist/"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                     
-                    <a href="https://tumblr.com"><i class="fa fa-tumblr-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/survivingartist/"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
 
-                    <a href="https://pinterest.com"><i class="fa fa-pinterest-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/survivin_artist"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
 
-                    <a href="https://github.com"><i class="fa fa-git-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="mailto:survivingartist@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a>
               </div>
 
               <div class="row">
