--- a/resources/colorcompany.html
+++ b/resources/colorcompany.html
@@ -319,15 +319,14 @@
 
         <div class="medium-4 column">
             <div class="row">
-              <div class="small-12 column">
-
-                    <a href="https://instagram.com"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+              <div class="medium-12 column">
+                    <a href="https://www.instagram.com/surviving_artist/"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                     
-                    <a href="https://tumblr.com"><i class="fa fa-tumblr-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/survivingartist/"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
 
-                    <a href="https://pinterest.com"><i class="fa fa-pinterest-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/survivin_artist"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
 
-                    <a href="https://github.com"><i class="fa fa-git-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="mailto:survivingartist@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a>
               </div>
 
               <div class="row">
