FINALLY ADDED CONTENT TO ABOUT PAGE

--- a/about/index.html
+++ b/about/index.html
@@ -224,18 +224,8 @@
 
   <div class="column">
   
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>The Surviving Artist is an inspired project by artist just like you, who thought it would be useful for college art students (from beginner to intermediate) to have a go to website for all their project resource needs. This website is to serve as an art student’s survival guide, to help provide art students of the Providence area with resources such as printing services, or where they can purchase materials for projects. Whether it’s in walking distance from your dorm, or a 15 minute bus trip, we want to be able to supply you with all your options.</p>
+  <p>We also understand how crucial it is to save what little money we have, and also strive to give information on the best locations that utilize student discounts or free rewards memberships. Not only do we want to contribute to helping you find products for your project, but to also provide you with local art activities and galleries you can attend that will help inspire you for upcoming projects. We understand college is stressful as it is - we hope our website can provide useful information that will help all art students of the Providence area with the necessary tools to survive school.</p>
   </div>
 </div>
 
