added images to resource page

--- a/resources/index.html
+++ b/resources/index.html
@@ -230,11 +230,11 @@
 
      <ul class="small-block-grid-2 medium-block-grid-3">
 
-      <li> <a href="printshops.html"><h3>Print Shops</h3> <img src="../img/fpoimage.png">  </li>
+      <li> <a href="printshops.html"><h3>Print Shops</h3> <img src="../img/printer.JPG">  </li>
 
-      <li> <a href="stores.html"><h3>Art Supply Stores</h3> <img src="../img/fpoimage.png">  </li>
+      <li> <a href="stores.html"><h3>Art Supply Stores</h3> <img src="../img/insidepaper.jpg">  </li>
 
-      <li> <a href="workspaces.html"><h3>Workspaces & Galleries</h3> <img src="../img/fpoimage.png">  </li>
+      <li> <a href="workspaces.html"><h3>Workspaces & Galleries</h3> <img src="../img/ruler.JPG">  </li>
 
       
 
